Retry code added

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,82 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">11,816</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">ff</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">19,244</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">31,060</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">chrome</a></td><td class="num">1</td><td class="num attn">11</td><td class="num attn">1</td><td class="num">9,043</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscript.TestCase1</td><td><a href="#m0">titleVerify</a></td><td rowspan="1">1538306566745</td><td rowspan="1">65</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">ff &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscript.TestCase1</td><td><a href="#m1">titleVerify</a></td><td rowspan="1">1538306571665</td><td rowspan="1">20</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testscript.TestCase1</td><td><a href="#m0">elementIsPresentOrNot</a></td><td rowspan="1">1538310714882</td><td rowspan="1">47</td></tr><tr><th colspan="4">chrome &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="11">testscript.TestCase1</td><td><a href="#m1">elementIsPresentOrNot</a></td><td rowspan="11">1538310714757</td><td rowspan="11">63</td></tr><tr class="skippedeven"><td><a href="#m2">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m3">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m4">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m5">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m6">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m7">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m8">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m9">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m10">elementIsPresentOrNot</a></td></tr><tr class="skippedeven"><td><a href="#m11">elementIsPresentOrNot</a></td></tr><tr><th colspan="4">chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscript.TestCase1</td><td><a href="#m12">titleVerify</a></td><td rowspan="1">1538310714929</td><td rowspan="1">16</td></tr></tbody>
 </table>
-<h2>chrome</h2><h3 id="m0">testscript.TestCase1#titleVerify</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>ff</h2><h3 id="m1">testscript.TestCase1#titleVerify</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>chrome</h2><h3 id="m0">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">testscript.TestCase1#elementIsPresentOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at junit.framework.Assert.assertTrue(Assert.java:27)
+	at testscript.TestCase1.elementIsPresentOrNot(TestCase1.java:31)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">testscript.TestCase1#titleVerify</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
