--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c9c3">  <td>18/09/30 14:29:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.titleVerify()[pri:0, instance:testscript.TestCase1@91161c7]">titleVerify</td> 
-  <td>main@1635756693</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/09/30 17:42:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@7d9d1a19]">elementIsPresentOrNot</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/09/30 17:42:04</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.titleVerify()[pri:0, instance:testscript.TestCase1@7d9d1a19]">titleVerify</td> 
+  <td>main@174573182</td>   <td></td> </tr>
 </table>
