--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>18/09/30 16:52:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser(java.lang.String)[pri:0, instance:testscript.TestCase1@6093dd95]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@604619635</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/09/30 16:52:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser(java.lang.String)[pri:0, instance:testscript.TestCase1@3fee9989]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@208497016</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/09/30 16:52:46</td>   <td>10834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.titleVerify()[pri:0, instance:testscript.TestCase1@6093dd95]">titleVerify</td> 
-  <td>TestNG-tests-1@604619635</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/09/30 16:52:46</td>   <td>10903</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.quitbrowser()[pri:0, instance:testscript.TestCase1@6093dd95]">&lt;&lt;quitbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@604619635</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/09/30 16:52:51</td>   <td>15754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.titleVerify()[pri:0, instance:testscript.TestCase1@3fee9989]">titleVerify</td> 
-  <td>TestNG-tests-2@208497016</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>18/09/30 16:52:51</td>   <td>15774</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.quitbrowser()[pri:0, instance:testscript.TestCase1@3fee9989]">&lt;&lt;quitbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@208497016</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser(java.lang.String)[pri:0, instance:testscript.TestCase1@1794d431]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>7948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>8011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>8057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>8120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>8182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.elementIsPresentOrNot()[pri:0, instance:testscript.TestCase1@1794d431]">elementIsPresentOrNot</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>8229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.titleVerify()[pri:0, instance:testscript.TestCase1@1794d431]">titleVerify</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>18/09/30 18:01:54</td>   <td>8245</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.quitbrowser()[pri:0, instance:testscript.TestCase1@1794d431]">&lt;&lt;quitbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1310540333</td>   <td></td> </tr>
 </table>
